test/compile-fail/resolution/conflicts/many/top.rhdl
struct a {}
enum a {}
entity a {}
const a: b = false;
type a = b;
struct b {}
